fixing link layout bug adding div around social link for better responsive css

--- a/app/assets/stylesheets/pages/_talents.scss
+++ b/app/assets/stylesheets/pages/_talents.scss
@@ -1130,6 +1130,18 @@ section.talent {
   section.talent {
       flex-direction: column-reverse;
       height: 210vh;
+      .rounded-shape {
+          // position: absolute;
+          // transform: translate(-50%, -50%);
+          // content: "";
+          // border: 1px solid #000;
+          height: 400px;
+          width: 300px;
+          // border-radius: 90%;
+          // transform: rotate(0deg);
+          // pointer-events: none;
+          // z-index: 0;
+        }
 
       &:nth-child(1) {
         justify-content: right;
